# outlook

./: .env.example  README.md  create_calendar.py  create_contact.py  create_event.py  create_folder.py  delete_calendar.py  delete_contact.py  delete_draft.py  delete_event.py  delete_folder.py  draft_mail.py  get_a_folder.py  get_all_calendars.py  get_all_contact.py  get_all_events.py  get_all_folder.py  get_calendar_details.py  get_connection_credentials.py  get_contact_details.py  get_draft.py  get_event_details.py  get_many_events.py  get_many_folders.py  main.py  mcp_config.json  pyproject.toml  send_drafted_mail.py  send_mail.py  update_a_contact.py  update_calendar.py  update_draft.py  update_folder.py
src/outlook_mcp/: __init__.py  connection.py  server.py
src/outlook_mcp/tools/: __init__.py  calendar.py  contacts.py  email.py  folders.py
