[project]
name = "outlook-mcp"
version = "0.1.0"
description = "Microsoft Outlook MCP Server - Provides tools for managing emails, contacts, calendars, and folders via Microsoft Graph API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.9.4",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]

[project.scripts]
outlook-mcp = "outlook_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["outlook_mcp*"]

[tool.setuptools.package-dir]
"" = "src"
